apps/nginx-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: nginx
  namespace: demo

spec:
  replicas: 2

  selector:
    matchLabels:
      app: nginx

  template:
    metadata:
      labels:
        app: nginx

    spec:
      containers:
      - name: nginx
        image: nginx:1.27

        ports:
        - containerPort: 80

        volumeMounts:
        - name: nginx-storage
          mountPath: /data

        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"

          limits:
            cpu: "250m"
            memory: "256Mi"

        readinessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 5
          periodSeconds: 5

        livenessProbe:
          httpGet:
            path: /
            port: 80

          initialDelaySeconds: 15
          periodSeconds: 10

      volumes:
      - name: nginx-storage
        persistentVolumeClaim:
          claimName: nginx-pvc
